--- a/core/src/main/resources/templates/problem.html
+++ b/core/src/main/resources/templates/problem.html
@@ -12,107 +12,127 @@
   <script src="/lib/vue.js"></script>
   <script src="/lib/axios.min.js"></script>
   <script src="/js/util.js"></script>
+  <script src="/js/components.js"></script>
 </head>
 
 <body>
-  <div th:include="template :: header"></div>
+  <div id="app">
+    <my-header v-bind:userinfo='userinfo'></my-header>
+
+    <div class="ui main container">
+      <h1 class="ui header">　</h1>
+      <br/>
+
+      <view-loader v-if='loading'></view-loader>
+      <view-404 v-if='is404'></view-404>
+
+      <template v-if='!loading &amp;&amp; !is404'>
+        <h1 class="ui header">{{ title }}</h1>
+
+        <div class="ui fluid icon input">
+          <input type="text" placeholder="搜索题目" />
+          <i class="search icon"></i>
+        </div>
 
 
-  <div id="app" class="ui main container">
-    <h1 class="ui header">Semantic UI Fixed Template</h1><br/>
 
-    <div th:include="template :: viewloader"></div>
-    <div th:include="template :: view404"></div>
+        <table class="ui celled striped table">
+          <thead>
+            <tr>
+              <th class="two wide">题目编号</th>
+              <th class="twelve wide">标题</th>
+              <th class="one wide">正确</th>
+              <th class="one wide">提交</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr v-for="item in list">
+              <td> {{ item.id }} </td>
+              <td>
+                <a :href="'/problem/'+item.id"> {{ item.title }}</a>
+              </td>
+        
+              <td>{{ item.acceptNum==null?0:item.acceptNum }}</td>
 
-    <div id="viewdata" style="display:none;">
-      <h1 class="ui header">{{ title }}</h1>
+              <td>{{ item.submitNum==null?0:item.submitNum }}</td>
+            </tr>
+          </tbody>
+        </table>
 
-      <div class="ui fluid icon input">
-        <input type="text" placeholder="搜索题目" />
-        <i class="search icon"></i>
-      </div>
+        <div class="ui pagination menu">
+          <a class="icon item">
+            <i class="left chevron icon"></i>
+          </a>
+          <a class="item">1</a>
+          <a class="item">2</a>
+          <a class="item">3</a>
+          <a class="item">4</a>
+          <a class="icon item">
+            <i class="right chevron icon"></i>
+          </a>
+        </div>
+      </template>
 
-
-
-      <table class="ui celled striped table">
-        <thead>
-          <tr>
-            <th class="two wide">题目编号</th>
-            <th class="twelve wide">标题</th>
-            <th class="one wide">正确</th>
-            <th class="one wide">提交</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr v-for="item in list">
-            <td> {{ item.id }} </td>
-            <td>
-              <a :href="'/problem/'+item.id"> {{ item.title }}</a>
-            </td>
-            <td>{{ item.acceptNum }}</td>
-            <td>{{ item.submitNum }}</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <div class="ui pagination menu">
-        <a class="icon item">
-          <i class="left chevron icon"></i>
-        </a>
-        <a class="item">1</a>
-        <a class="item">2</a>
-        <a class="item">3</a>
-        <a class="item">4</a>
-        <a class="icon item">
-          <i class="right chevron icon"></i>
-        </a>
-      </div>
     </div>
-
+    <auth-modal></auth-modal>
+    <my-footer></my-footer>
   </div>
-
-  <div th:include="template :: footer"></div>
-
-
   <script>
-    (function () {
-      var ld = {
-        id: 0,
-        title: '',
-        list: []
-      };
-      var pathId = getPathId();
-      var listDataApi = '/api/t/' + pathId;
-      if (pathId == null) {
-        listDataApi = '/api/p';
-      }
-      axios.get(listDataApi, {
-        headers: {'Access-Token': window.localStorage.getItem("token")}
-      })
-        .then(function (response) {
-          //TODO 系統異常處理
-          data = response.data.data;
-          ld.list = data.problemListItemVos;
-          ld.id = data.id;
-          ld.title = data.title;
-          $("#viewloader").hide();
-          $("#viewdata").show();
-        })
-        .catch(function (error) {
-          if (error.response.status === 404) {
-            $("#viewloader").hide();
-            $("#view404").show();
-          } else {
-            console.log(error.response.status);
-            window.location.href = "/login";
-          }
 
-        });
-      var vm = new Vue({
-        el: '#app',
-        data: ld
+    var ld = {
+      id: 0,
+      title: '',
+      list: [],
+      userinfo: {},
+      loading: true,
+      is404: false
+    };
+
+    axios.get('/api/u/info', {
+      headers: { 'Access-Token': window.localStorage.getItem('token') }
+    })
+      .then(function (response) {
+        ld.userinfo = response.data.data
       })
-    })();
+      .catch(function (error) {
+        $('.ui.basic.modal').modal('show');
+        $('#modalmsg').text(error.response.data.msg)
+        $(":root").delay(3000).queue(function () {
+          $('.ui.basic.modal').modal('hide');
+          window.location.href = "/login";
+        });
+      })
+
+    var pathId = getPathId();
+    var listDataApi = '/api/t/' + pathId;
+    if (pathId == null) {
+      listDataApi = '/api/p';
+    }
+    axios.get(listDataApi, {
+      headers: { 'Access-Token': window.localStorage.getItem("token") }
+    })
+      .then(function (response) {
+        //TODO 系統異常處理
+        data = response.data.data;
+        ld.list = data.problemListItemVos;
+        ld.id = data.id;
+        ld.title = data.title;
+        ld.loading = false;
+      })
+      .catch(function (error) {
+        ld.loading = false;
+        if (error.response.status === 404) {
+          ld.is404 = true;
+        } else {
+          console.log(error.response.status);
+        }
+
+      });
+    var vm = new Vue({
+      el: '#app',
+      data: ld
+    })
+
 
   </script>
 
